2009-06-22  Jaroslav Hajek  <highegg@gmail.com>

	* ov-cell.cc (octave_cell::all_strings): Avoid duplicate conversions.

2009-06-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (Fsubsasgn): Uniquify shared value before assigning to it.

2009-06-19  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lookup.cc: Update docs.

2009-06-17  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_octave_value::get_data):
	If octave_value::mex_get_data returns a valid pointer, mark it as
	foreign and return it instead of enumerating the types that can be
	handled directly.

	* ov-re-mat.h (octave_matrix::mex_get_data): New function.
	* ov-bool-mat.h (octave_bool_matrix::mex_get_data): Ditto.
	* ov-flt-re-mat.h (octave_float_matrix::mex_get_data): Ditto.
	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::mex_get_data): Ditto.
	* ov-base-mat.h (octave_base_matrix::mex_get_data): Delete.

2009-06-16  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (symbol_table::set_scope_and_context): Avoid checking
	error_state for setting context.

2009-06-15  Jaroslav Hajek  <highegg@gmail.com>

	* ov-re-mat.h (octave_matrix::octave_matrix (const Array<octave_idx_type>&,
	bool)): New constructor.
	* ov.cc (octave_value::octave_value (const Array<octave_idx_type>&,
	bool)): New constructor.
	* ov.h: Declare it.

	* data.cc (Fsort, F__sort_rows_idx__): Use the new constructor.
	* DLD-FUNCTIONS/find.cc (Ffind): Ditto.
	* DLD-FUNCTIONS/lookup.cc (Flookup): Ditto.
	* DLD-FUNCTIONS/max.cc (Fmax, Fmin, Fcummax, Fcummin): Ditto.

2009-06-15  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-mat.h (octave_base_matrix::idx_cache): New member field.
	(octave_base_matrix::typ): Turn to MatrixType *.
	(octave_base_matrix::octave_base_matrix (...)): Update constructors.
	(octave_base_matrix::clear_cached_info,
	octave_base_matrix::set_idx_cache): New member functions.
	* ov-base-mat.cc (octave_base_matrix::assign,
	octave_base_matrix::delete_elements): Call clear_cached_info here.