@@ -1,5 +1,14 @@
 2009-06-22  Jaroslav Hajek  <highegg@gmail.com>
 
+	* unwind-prot.h (unwind_protect): Rewrite.
+	(unwind_protect::protect_var): New class.
+	(unwind_protect::protect_mem): New class.
+	* unwind-prot.cc (unwind_protect): Rewrite.
+	* pt-eval.cc (tree_evaluator::visit_try_catch_command): Delete frame
+	properly.
+
+2009-06-22  Jaroslav Hajek  <highegg@gmail.com>
+
 	* ov-cell.cc (octave_cell::all_strings): Avoid duplicate conversions.
 
 2009-06-20  Jaroslav Hajek  <highegg@gmail.com>
